...
    <string name="app_name">NotYet</string>

    <!--Main menu-->
    <string name="action_create_new_activity_label">New Activity</string>
    <string name="action_visibility_on_label">Show All Activities</string>
    <string name="action_visibility_off_label">Hide Completed Activities</string>
    <string name="action_change_sort">Change Sort</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">@string/help_activity_title</string>
    <string name="action_about">@string/about_activity_title</string>

    <!--Done Cancel Fragment-->
    <string name="done_label">Done</string>
    <string name="cancel_label">Cancel</string>
    <string name="done_button_content_description">Checkmark for done</string>
    <string name="cancel_button_content_description">X for cancel</string>
...
    <string name="help_days">Which days of the week should this activity be shown?\n\nEx. If you only want to lift on Mon, Wed, Fri, then just leave those selected and the main page won\'t show Lifting on the other days.</string>

    <!--Main Activity-->
    <string name="hide_until_tomorrow">Hide this activity until tomorrow</string>
    <string name="set_value_and_hide_until_tomorrow">Set value and hide until tomorrow</string>
    <string name="list_item_activity_header_hide">Hide this header permanently</string>
    <string name="list_item_activity_title">Activity Title</string>
    <string name="list_item_activity_today">Today\'s Value</string>
    <string name="list_item_activity_current_A7">A7</string>
    <string name="list_item_activity_current_A30">A30</string>
    <string name="list_item_activity_current_A90">A90</string>
    <string name="list_item_activity_best_A7">B7</string>
    <string name="list_item_activity_best_A30">B30</string>
    <string name="list_item_activity_best_A90">B90</string>
    <string name="main_header_help_current">A7 is the average of the last 7 days including today.\nA30 is the average of the last 30 days including today.\nA90 is the average of the last 90 days including today.</string>
    <string name="main_header_help_best">B7 is the best A7 you have ever gotten.\nB30 is the best A30 you have ever gotten.\nB90 is the best A90 you have ever gotten.</string>
    <string name="no_activities_new_user_hero">Click here to start forming a new habit.</string>
    <string name="main_header_help_content_description">help button</string>

    <!--Habit Activity-->
    <string name="habit_settings_submenu_title">Activity</string>
    <string name="action_habit_settings">Settings</string>
    <string name="action_habit_delete">Delete&#8230;</string>
...
    <string name="reset_habit_dialog_message">Do you really want to reset this activity and delete all associated data?</string>
    <string name="reset_habit_completed_toast">Activity reset</string>
    <string name="habit_list_item_checkmark_content_description">Checkmark to indicated the day is selected for multiple editing.</string>

    <!--Main Settings-->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_day_change_set">Set</string>
    <string name="pref_day_change_cancel">Cancel</string>
    <string name="pref_day_change_label">Time to start a new day</string>
    <string name="pref_day_change_key">day_change</string>
    <string name="pref_day_change_default">0</string>

    <!--Sort Activity-->
    <string name="list_item_drag_handle_content_description">Handle to drag for reordering activities.</string>

...
    <!--CreateActivity-->
    <string name="error_creating_activity_title">Error Creating Activity</string>
    <string name="error_creating_activity_message">Make sure you have a unique title for your activity and all fields are completed.</string>

    <!--AboutActivity-->
    <string name="about_activity_title">About</string>
    <string name="about_about_header">@string/about_activity_title</string>
    <string name="about_text">This application was made mostly for myself to improve my habits based on a strategy that I think works best.
        Failing once does not send you back to the beginning&#8230; you must get back up and continue to strive to improve. I hope it is useful for you too.</string>
    <string name="about_email"> - <a href="mailto:NotYetApp@outlook.com">NotYetApp@outlook.com</a></string>
    <string name="about_attribution_header">Attributions</string>
    <string name="about_attributions">This application uses:\n
        &#8226;<a href="http://www.android-graphview.org/">http://www.android-graphview.org/</a>. Licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache 2.0</a>.\n
...
