<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/habit_listview_and_best_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/habit_data_header_layout"
        android:layout_alignParentTop="true"
...
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_thickness"
        android:layout_below="@id/habit_data_header_layout"
        style="@style/SeparatorStyle" />

    <ListView
        android:id="@+id/habit_listview"
        android:layout_above="@id/separator_line_above_footer"
        android:layout_below="@id/separator_line_below_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>
</RelativeLayout>
